[package]
name = "build-alert"
version = "0.0.0"
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["development-tools::build-utils"]
description = "Display a message in the Cargo build output during compilation."
documentation = "https://docs.rs/build-alert"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/build-alert"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", default-features = false, features = ["parsing", "proc-macro"] }
termcolor = "1"
