[package]
name = "build-alert"
version = "0.1.6"
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["development-tools::build-utils", "no-std", "no-std::no-alloc"]
description = "Display a message in the Cargo build output during compilation."
documentation = "https://docs.rs/build-alert"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/build-alert"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.46", default-features = false, features = ["parsing", "proc-macro"] }
termcolor = "1.1"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]
